data/derived/comb/progs/unify/prog7298.ml.out
Characters 102-125:
  | x::x'::x'' -> [(x*i)/10]@[((x*i) mod 10) + x']@ mulByDigit i [x']@[x''];;
                                                    ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type int list
       Type int list is not compatible with type int 
